--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/2d42ca94c9.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="shared.css">
     <title>Movie Woobie</title>
@@ -33,7 +35,7 @@
             <div id="hero-content">
                 <h1>My Movies Website</h1>
                 <p>To chaliye shuru krte hain</p>
-                <a href="/places.html">Find Movies</a>
+                <a href="/movies.html">Find Movies</a>
 
             </div>
 
@@ -43,6 +45,7 @@
             <h2>Highlights</h2>
             <ul id="movies">
                 <li class="movie">
+
                     <img src="/images/movies/c630d2e738d3bb015c33a5a338108b21.jpg" alt="">
                     <p>Harry <strong>Friends</strong></p>
                 </li>
@@ -57,7 +60,17 @@
             </ul>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <ul>
+            <li>
+                <a href="https://linkedin.com/"><img src="/images/icons/download.png" alt=""></a>
+            </li>
+            <li>
+                <a href="https://instagram.com/"><img src="/images/icons/images.png" alt=""></a>
+            </li>
+        </ul>
+
+    </footer>
 
 </body>
 
