--- a/movies.html
+++ b/movies.html
@@ -12,188 +12,192 @@
 </head>
 
 <body>
+    <div class="body">
+        <header>
+            <div id="page-logo">
+                <a href="/index.html">Movie Woobie</a>
+            </div>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="/movies.html">Movies</a>
+                    </li>
+                    <li>
+                        <a href="#">About</a>
 
-    <header>
-        <div id="page-logo">
-            <a href="/index.html">Movie Woobie</a>
-        </div>
-        <nav>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main class="container">
             <ul>
                 <li>
-                    <a href="/movies.html">Movies</a>
+                    <img src="/images/movies/Harry_Potter_and_the_Philosopher's_Stone_banner.jpg" alt="Harry Bhai ki photo">
+                    <div class="item-content">
+                        <div>
+                            <h2>Harry Potter</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio iure similique quis cumque facilis mollitia nisi perspiciatis culpa .
+                            </p>
+                        </div>
+                        <div class="actions">
+                            <a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone_(film)">CheckOut &#x2192</a>
+                        </div>
+
+                    </div>
+
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <img src="/images/movies/Harry_Potter_and_the_Order_of_the_Phoenix_poster.jpg" alt="Harry Bhai ki photo">
+                    <div class="item-content">
+                        <div>
+                            <h2>Harry Potter</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio iure similique quis cumque facilis mollitia nisi perspiciatis culpa . Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, iste tempora!
+
+                            </p>
+                        </div>
+                        <div class="actions">
+                            <a href="https://en.wikipedia.org/wiki/Harry_Potter_(film_series)">CheckOut &#x2192</a>
+                        </div>
+
+                    </div>
+
+                </li>
+                <li>
+                    <img src="/images/movies/Harry_Potter_and_the_Chamber_of_Secrets_movie.jpg" alt="Harry Bhai ki photo">
+                    <div class="item-content">
+                        <div>
+                            <h2>Harry Potter</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio iure similique quis cumque facilis mollitia nisi perspiciatis culpa . Aperiam possimus suscipit iste odit ipsa quam voluptate, soluta repellendus recusandae
+                                quasi provident commodi consequuntur nulla rerum et tempore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum quis corrupti repellat. Dolor, vel qui tempora enim quisquam ipsam a distinctio architecto reiciendis
+                                nulla molestias vitae esse itaque aut iste.
+                            </p>
+                        </div>
+                        <div class="actions">
+                            <a href="hhttps://en.wikipedia.org/wiki/Harry_Potter_(film_series)">CheckOut &#x2192</a>
+                        </div>
+
+                    </div>
+
+                </li>
+                <li>
+                    <img src="/images/movies/Harry_Potter_and_the_Deathly_Hallows_–_Part_1.jpg" alt="Harry Bhai ki photo">
+                    <div class="item-content">
+                        <div>
+                            <h2>Harry Potter</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio iure similique quis cumque facilis mollitia nisi perspiciatis culpa .
+                            </p>
+                        </div>
+                        <div class="actions">
+                            <a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone_(film)">CheckOut &#x2192</a>
+                        </div>
+
+                    </div>
+
+                </li>
+                <li>
+                    <img src="/images/movies/Harry_Potter_and_the_Half-Blood_Prince_poster.jpg" alt="Harry Bhai ki photo">
+                    <div class="item-content">
+                        <div>
+                            <h2>Harry Potter</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio iure similique quis cumque facilis mollitia nisi perspiciatis culpa .
+                            </p>
+                        </div>
+                        <div class="actions">
+                            <a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone_(film)">CheckOut &#x2192</a>
+                        </div>
+
+                    </div>
+
+                </li>
+                <li>
+                    <img src="/images/movies/Harry_Potter_and_the_Goblet_of_Fire_Poster.jpg" alt="Harry Bhai ki photo">
+                    <div class="item-content">
+                        <div>
+                            <h2>Harry Potter</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio iure similique quis cumque facilis mollitia nisi perspiciatis culpa .
+                            </p>
+                        </div>
+                        <div class="actions">
+                            <a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone_(film)">CheckOut &#x2192</a>
+                        </div>
+
+                    </div>
+
+                </li>
+                <li>
+                    <img src="/images/movies/Harry_Potter_and_the_Half-Blood_Prince_poster.jpg" alt="Harry Bhai ki photo">
+                    <div class="item-content">
+                        <div>
+                            <h2>Harry Potter</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio iure similique quis cumque facilis mollitia nisi perspiciatis culpa .
+                            </p>
+                        </div>
+                        <div class="actions">
+                            <a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone_(film)">CheckOut &#x2192</a>
+                        </div>
+
+                    </div>
+
+                </li>
+                <li>
+                    <img src="/images/movies/hogwarts-3476786_1920.png" alt="Harry Bhai ki photo">
+                    <div class="item-content">
+                        <div>
+                            <h2>Harry Potter</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio iure similique quis cumque facilis mollitia nisi perspiciatis culpa .
+                            </p>
+                        </div>
+                        <div class="actions">
+                            <a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone_(film)">CheckOut &#x2192</a>
+                        </div>
+
+                    </div>
+
+                </li>
+                <li>
+                    <img src="/images/movies/Harry_Potter_and_the_Philosopher's_Stone_banner.jpg" alt="Harry Bhai ki photo">
+                    <div class="item-content">
+                        <div>
+                            <h2>Harry Potter</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio iure similique quis cumque facilis mollitia nisi perspiciatis culpa .
+                            </p>
+                        </div>
+                        <div class="actions">
+                            <a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone_(film)">CheckOut &#x2192</a>
+                        </div>
+
+                    </div>
+
+                </li>
+                <li>
+                    <img src="/images/movies/Harry_Potter_and_the_Philosopher's_Stone_banner.jpg" alt="Harry Bhai ki photo">
+                    <div class="item-content">
+                        <div>
+                            <h2>Harry Potter</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio iure similique quis cumque facilis mollitia nisi perspiciatis culpa .
+                            </p>
+                        </div>
+                        <div class="actions">
+                            <a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone_(film)">CheckOut &#x2192</a>
+                        </div>
+
+                    </div>
 
                 </li>
             </ul>
-        </nav>
-    </header>
-    <main class="container">
-        <ul>
-            <li>
-                <img src="/images/movies/Harry_Potter_and_the_Philosopher's_Stone_banner.jpg" alt="Harry Bhai ki photo">
-                <div class="item-content">
-                    <div>
-                        <h2>Harry Bhaiya</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio iure similique quis cumque facilis mollitia nisi perspiciatis culpa .
-                        </p>
-                    </div>
-                    <div class="actions">
-                        <a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone_(film)">CheckOut</a>
-                    </div>
+        </main>
+        <footer>
+            <ul>
+                <li>
+                    <a href="https://linkedin.com/"><img src="/images/icons/download.png" alt="linkedin"></a>
+                </li>
+                <li>
+                    <a href="https://instagram.com/"><img src="/images/icons/images.png" alt="instagram"></a>
+                </li>
+            </ul>
 
-                </div>
-
-            </li>
-            <li>
-                <img src="/images/movies/Harry_Potter_and_the_Order_of_the_Phoenix_poster.jpg" alt="Harry Bhai ki photo">
-                <div class="item-content">
-                    <div>
-                        <h2>Harry Bhaiya</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio iure similique quis cumque facilis mollitia nisi perspiciatis culpa .
-                        </p>
-                    </div>
-                    <div class="actions">
-                        <a href="https://en.wikipedia.org/wiki/Harry_Potter_(film_series)">CheckOut</a>
-                    </div>
-
-                </div>
-
-            </li>
-            <li>
-                <img src="/images/movies/Harry_Potter_and_the_Chamber_of_Secrets_movie.jpg" alt="Harry Bhai ki photo">
-                <div class="item-content">
-                    <div>
-                        <h2>Harry Bhaiya</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio iure similique quis cumque facilis mollitia nisi perspiciatis culpa .
-                        </p>
-                    </div>
-                    <div class="actions">
-                        <a href="hhttps://en.wikipedia.org/wiki/Harry_Potter_(film_series)">CheckOut</a>
-                    </div>
-
-                </div>
-
-            </li>
-            <li>
-                <img src="/images/movies/Harry_Potter_and_the_Deathly_Hallows_–_Part_1.jpg" alt="Harry Bhai ki photo">
-                <div class="item-content">
-                    <div>
-                        <h2>Harry Bhaiya</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio iure similique quis cumque facilis mollitia nisi perspiciatis culpa .
-                        </p>
-                    </div>
-                    <div class="actions">
-                        <a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone_(film)">CheckOut</a>
-                    </div>
-
-                </div>
-
-            </li>
-            <li>
-                <img src="/images/movies/Harry_Potter_and_the_Deathly_Hallows_–_Part_2.jpg" alt="Harry Bhai ki photo">
-                <div class="item-content">
-                    <div>
-                        <h2>Harry Bhaiya</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio iure similique quis cumque facilis mollitia nisi perspiciatis culpa .
-                        </p>
-                    </div>
-                    <div class="actions">
-                        <a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone_(film)">CheckOut</a>
-                    </div>
-
-                </div>
-
-            </li>
-            <li>
-                <img src="/images/movies/Harry_Potter_and_the_Goblet_of_Fire_Poster.jpg" alt="Harry Bhai ki photo">
-                <div class="item-content">
-                    <div>
-                        <h2>Harry Bhaiya</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio iure similique quis cumque facilis mollitia nisi perspiciatis culpa .
-                        </p>
-                    </div>
-                    <div class="actions">
-                        <a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone_(film)">CheckOut</a>
-                    </div>
-
-                </div>
-
-            </li>
-            <li>
-                <img src="/images/movies/Harry_Potter_and_the_Half-Blood_Prince_poster.jpg" alt="Harry Bhai ki photo">
-                <div class="item-content">
-                    <div>
-                        <h2>Harry Bhaiya</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio iure similique quis cumque facilis mollitia nisi perspiciatis culpa .
-                        </p>
-                    </div>
-                    <div class="actions">
-                        <a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone_(film)">CheckOut</a>
-                    </div>
-
-                </div>
-
-            </li>
-            <li>
-                <img src="/images/movies/hogwarts-3476786_1920.png" alt="Harry Bhai ki photo">
-                <div class="item-content">
-                    <div>
-                        <h2>Harry Bhaiya</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio iure similique quis cumque facilis mollitia nisi perspiciatis culpa .
-                        </p>
-                    </div>
-                    <div class="actions">
-                        <a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone_(film)">CheckOut</a>
-                    </div>
-
-                </div>
-
-            </li>
-            <li>
-                <img src="/images/movies/Harry_Potter_and_the_Philosopher's_Stone_banner.jpg" alt="Harry Bhai ki photo">
-                <div class="item-content">
-                    <div>
-                        <h2>Harry Bhaiya</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio iure similique quis cumque facilis mollitia nisi perspiciatis culpa .
-                        </p>
-                    </div>
-                    <div class="actions">
-                        <a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone_(film)">CheckOut</a>
-                    </div>
-
-                </div>
-
-            </li>
-            <li>
-                <img src="/images/movies/Harry_Potter_and_the_Philosopher's_Stone_banner.jpg" alt="Harry Bhai ki photo">
-                <div class="item-content">
-                    <div>
-                        <h2>Harry Bhaiya</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio iure similique quis cumque facilis mollitia nisi perspiciatis culpa .
-                        </p>
-                    </div>
-                    <div class="actions">
-                        <a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone_(film)">CheckOut</a>
-                    </div>
-
-                </div>
-
-            </li>
-        </ul>
-    </main>
-    <footer>
-        <ul>
-            <li>
-                <a href="https://linkedin.com/"><img src="/images/icons/download.png" alt=""></a>
-            </li>
-            <li>
-                <a href="https://instagram.com/"><img src="/images/icons/images.png" alt=""></a>
-            </li>
-        </ul>
-
-    </footer>
+        </footer>
+    </div>
 
 </body>
 
